# DungeonOfDoom3

./: BACKLOG.md  pyproject.toml  run.sh
.ipynb_checkpoints/: README-checkpoint.md
.opencode/agents/: code-tester.md  code-writer.md  documenter.md  e2e-tester.md  game-designer.md  graphics-artist.md  orchestrator.md  task-planner.md  ux-designer.md
config/: options.json
data/enemies/: level_test.json
data/enemies/.ipynb_checkpoints/: level_1-checkpoint.json
data/items/: level_test.json
data/items/.ipynb_checkpoints/: level_1-checkpoint.json
data/maps/: level_1.csv  level_2.csv  level_3.csv  level_4.csv  level_5.csv  level_test.csv
data/patrols/: level_1.json  level_test.json
docs/: AGENTS.md  GRAPHICS_SPECS.md  IMPLEMENT_PROMPT.md  PLANNING.md  UX_SPECS.md
docs/.ipynb_checkpoints/: AGENTS-checkpoint.md  GAME_SPECS-checkpoint.md  PLANNING-checkpoint.md
src/.ipynb_checkpoints/: main-checkpoint.py
src/core/: constants.py  game.py  scene.py  scene_manager.py
src/entities/: armor.py  enemy.py  player.py  tilemap.py  weapon.py
src/loaders/: enemy_loader.py  item_loader.py  map_loader.py  patrol_loader.py
src/scenes/: game_scene.py  gameover_scene.py  level_transition_scene.py  menu_scene.py  options_scene.py  pause_scene.py  victory_scene.py
src/systems/: ai_system.py  audio_system.py  camera_system.py  combat_system.py  input_system.py  physics_system.py  raycaster.py
tests/: test_ai.py  test_combat.py  test_constants.py  test_e2e_gameplay.py  test_enemy.py  test_movement.py  test_physics.py  test_player.py
(+2 files in other folders)
