[project]
name = "escape-the-dungeon-of-doom"
version = "0.1.0"
description = "A first-person medieval action game in the style of DOOM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pylint>=3.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pylint]
max-line-length = 100
disable = ["C0114", "C0115", "C0116"]
